--- a/04-variables.yaml
+++ b/04-variables.yaml
@@ -7,5 +7,5 @@
   tasks:
   - name: check variables
     ansible.builtin.debug:
-      msg: "HI, I am learning {{course}}, Trainer is {{Trainer}}, Duration is {{Duration}}"
-      
+      msg: "HI, I am learning {{Course}}, Trainer is {{Trainer}}, Duration is {{Duration}}"
+
