--- a/09-vars-from-args.yaml
+++ b/09-vars-from-args.yaml
@@ -1,7 +1,6 @@
-- name: varibales from PLAY level
+- name: variables from PLAY level
   hosts: localhost
   tasks:
   - name: check variables
     ansible.builtin.debug:
       msg: "Hello {{PERSON}}, Good {{WISHES}}"
-      
